Selecting fieldds to query

--- a/playground/templates/hello.html
+++ b/playground/templates/hello.html
@@ -8,6 +8,7 @@
     <ul>
       {% for product in products %}
       <li>{{ product.title }}</li>
+      <!-- <li>{{ product }}</li> -->
       {% endfor %}
     </ul>
   </body>
