--- a/playground/templates/hello.html
+++ b/playground/templates/hello.html
@@ -7,7 +7,9 @@
     {% endif %}
     <ul>
       {% for product in products %}
-      <li>{{ product.title }}</li>
+      <!-- <li>{{ product.title }}</li> -->
+      <!-- <li>{{ product.title }} ${{ product.unit_price }}</li> -->
+      <li>{{ product.title }} : {{ product.description }}</li>
       <!-- <li>{{ product }}</li> -->
       {% endfor %}
     </ul>
