--- a/playground/templates/hello.html
+++ b/playground/templates/hello.html
@@ -6,11 +6,15 @@
     <h1>Hello World</h1>
     {% endif %}
     <ul>
-      {% for product in products %}
-      <!-- <li>{{ product.title }}</li> -->
-      <!-- <li>{{ product.title }} ${{ product.unit_price }}</li> -->
-      <li>{{ product.title }} : {{ product.description }}</li>
-      <!-- <li>{{ product }}</li> -->
+      {% for order in orders %}
+        <!-- {% for product in products %} -->
+        <!-- {% endfor %} -->
+        <!-- <li>{{ product.title }}</li> -->
+        <li>{{ order.id }} - {{ order.customer.first_name }}</li>
+        <!-- <li>{{ product.title }} - {{ product.collection.title }}</li> -->
+        <!-- <li>{{ product.title }} ${{ product.unit_price }}</li> -->
+        <!-- <li>{{ product.title }} : {{ product.description }}</li> -->
+        <!-- <li>{{ product }}</li> -->
       {% endfor %}
     </ul>
   </body>
